basertpdepayload: create valid segment when given non-time segment

This will become an error in 1.10.

https://bugzilla.gnome.org/show_bug.cgi?id=765796